--- a/assets/css/cycle.less
+++ b/assets/css/cycle.less
@@ -161,15 +161,13 @@
         margin-left: -10px;
         margin-right: -10px;
 
-        span, svg {
-            color: #000;
+        svg {
+            fill: #000;
             cursor: pointer;
-            font-size: 30px;
+            width: 30px;
+            height: 30px;
             opacity: 0.6;
             padding: 0 10px;
-        }
-
-        svg {
             box-sizing: content-box !important;
         }
     }
@@ -200,10 +198,11 @@
     .cycle-play-control {
         line-height: 1;
 
-        span, svg {
-            color: #000;
+        svg {
+            fill: #000;
             cursor: pointer;
-            font-size: 30px;
+            width: 30px;
+            height: 30px;
             opacity: 0.6;
             padding: 10px;
         }
